overlay should not show up on mobile and font size fix for nav

--- a/css/main.css
+++ b/css/main.css
@@ -16,24 +16,6 @@ p, a {
 	line-height: 1.4;
 }
 
-/*#landing-parallax {
-	height: 110vh;
-	background: url(../images/diamonds_bg.jpg) 50% 0 no-repeat;
-	-webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    position: relative;
-}*/
-
-/*	#landing-content-container {
-		top: 50%;
-		left: 50%;
-		text-align: center;
-		position: absolute;
-		margin: -100px 0 0 -215px;
-	}*/
-
 .center-contents {
 	display: flex;
 	justify-content: center;
@@ -57,9 +39,10 @@ p, a {
 .img-container > img { width: 100%; }
 
 .work { position: relative; }
-.work:hover .overlay { visibility: visible; opacity: 1; }
 
-.overlay {
+@media only screen and (min-width: 33.75em) {  /* 540px */
+  .work:hover .overlay { visibility: visible; opacity: 1; }
+  .overlay {
 	opacity: 0;
 	transition: opacity 0.2s linear;
 	position: absolute;
@@ -84,6 +67,7 @@ p, a {
 		text-transform: uppercase;
 		letter-spacing: 2px;
 	}
+}
 
 .section-header {
 	font-family: 'Nunito', sans-serif;
@@ -154,6 +138,14 @@ p, a {
 		transition: color 1s ease;
 		color: rgb(80, 80, 80);
 	}
+
+	@media only screen and (max-width: 33.75em) {  /* 540px */
+	  nav a {
+	  	font-size: 0.5em;
+	  	padding-right: 15px;
+	  }
+	}
+
 
 	nav a:hover {
 		font-weight: 700;
